--- a/THANKS
+++ b/THANKS
@@ -93,6 +93,7 @@
   James Su			james.su@gmail.com
   Jeff Squyres			jsquyres@lam-mpi.org
   Jeremy C. Reed		reed@reedmedia.net
+  Jim Meyering			jim@meyering.net
   Joel N. Weber II		devnull@gnu.org
   Joerg Sonnenberger		joerg@netbsd.org
   John Bowler			jbowler@acm.org
