--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* NEWS, libtool.m4, ltmain.in: Bump copyright years.
+
 2007-11-30  Stefan Sperling  <stsp@elego.de>  (tiny change)
 
 	* doc/libtool.texi (Linking executables): Reorder paragraphs.
