--- a/NEWS
+++ b/NEWS
@@ -82,6 +82,7 @@ New in 2.1a: 2008-??-??; CVS version 2.1a, Libtool team:
   - Support for DragonFly BSD, improved support for FreeBSD.
   - Improved support for GNU/kFreeBSD and GNU/NetBSD.
   - Support for Interix 3 (Windows SFU) and newer versions.
+  - Support for AIX 6.1.
   - Improved support for UnixWare.
   - Initial support for RDOS.
   - Initial Support for FC (modern Fortran).
