--- a/THANKS
+++ b/THANKS
@@ -112,6 +112,7 @@
   Peter Eisentraut		peter_e@gmx.net
   Peter Jeremy			peterjeremy@optushome.com.au
   Rainer Orth			ro@TechFak.Uni-Bielefeld.DE
+  Rainer Tammer			tammer@tammer.net
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
   Robert Ögren			lists@roboros.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
@@ -137,7 +138,7 @@
 
 -- 
   Copyright (C) 1996, 1998, 1999, 2001, 2002, 2003, 2004, 2005, 2006,
-                2007 Free Software Foundation, Inc.
+                2007, 2008 Free Software Foundation, Inc.
   Written by Gord Matzigkeit, 1996
 
   This file is part of GNU Libtool.
