--- a/THANKS
+++ b/THANKS
@@ -93,6 +93,7 @@
   James Su			james.su@gmail.com
   Jeff Squyres			jsquyres@lam-mpi.org
   Jeremy C. Reed		reed@reedmedia.net
+  Jim Meyering			jim@meyering.net
   Joel N. Weber II		devnull@gnu.org
   Joerg Sonnenberger		joerg@netbsd.org
   John Bowler			jbowler@acm.org
@@ -111,6 +112,7 @@
   Peter Eisentraut		peter_e@gmx.net
   Peter Jeremy			peterjeremy@optushome.com.au
   Rainer Orth			ro@TechFak.Uni-Bielefeld.DE
+  Rainer Tammer			tammer@tammer.net
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
   Robert Ögren			lists@roboros.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
