--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-01-08  Gary V. Vaughan  <gary@gnu.org>
+
+	* tests/configure-iface.at, tests/nonrecursive.at,
+	tests/recursive.at, tests/subproject.at (_LTDL_SETUP):
+	Renamed to _LT_AT_LTDL_SETUP to avoid a nameclash with
+	libltdl/m4/ltoptions.m4:_LTDL_SETUP from yesterday's patch.
+	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
 2008-01-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/runpath-in-lalib.at (Runpath in libtool library files):
@@ -47,11 +55,11 @@
 	expanded before LTDL_INIT, and be sure to parse caller options.
 	* configure.ac: Call directly into internal _LTDL_SETUP macro.
 	* libtoolize.m4sh (func_scan_files): Ltdl mode argument moved from
-	LT_CONFIG_LTDL_DIR to LT_INIT.
+	LT_CONFIG_LTDL_DIR to LTDL_INIT.
 	* tests/nonrecursive.at, tests/recursive.at: Use new interfaces.
 	* tests/configure-iface.at: Test it.
 	* Makefile.am (TESTSUITE_AT): Add configure-iface.at.
-	* doc/libtool.texi (Distributing libltdl): Document improved.
+	* doc/libtool.texi (Distributing libltdl): Document improved
 	LTDL_INIT interfaces.
 	* NEWS: Updated.
 
