--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-08  Gary V. Vaughan  <gary@gnu.org>
 
+	* libltdl/m4/ltdl.m4 (_LT_CONFIG_LTDL_DIR): Correct closing
+	comment.
+	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
 	* NEWS: Grammar nit.
 
 	* tests/configure-iface.at, tests/nonrecursive.at,
