--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/ltdl.m4 (_LTDL_INSTALLABLE): Restore correct
+	_LT_BUILD_PREFIX-using code.
+
 2008-01-08  Gary V. Vaughan  <gary@gnu.org>
 
 	* tests/recursive.at: Remove bogus --debug option.
