--- a/NEWS
+++ b/NEWS
@@ -77,6 +77,7 @@ New in 2.1a: 2008-??-??; CVS version 2.1a, Libtool team:
 
 * Changes in supported systems or compilers:
 
+  - Removed bitrotted support for xlc on Mac OS X.
   - Detection of compiler wrappers distcc/ccache and $host_alias prefix.
   - Basic support for PIE (position-independent executables).
   - Support for DragonFly BSD, improved support for FreeBSD.
