--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-01-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS) <exclude_expsyms>:
+	Also exclude `_GLOBAL__F[ID]_.*'.  Also set for the C++ tag.
+	Fixes esp. demo/helldl build failure with GCC on AIX.
+	Report by Rainer Tammer.
+
 2008-01-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* mdemo/main.c: Include string.h, for strrchr.
