--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-01-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/configure-iface.at: Ensure LTDLINCL is expanded
+	before CPPFLAGS, so that even CPPFLAGS=-I/usr/local/include
+	won't make the tests prefer an installed ltdl.h over the
+	in-package one.
+	Report by Bob Friesenhahn.
+
 2008-01-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) <exclude_expsyms>:
